--- a/app/views/product-case-testing/what-is-the-product-name.html
+++ b/app/views/product-case-testing/what-is-the-product-name.html
@@ -22,25 +22,25 @@
 
     <ul class="govuk-list govuk-error-summary__list">
       <li>
-        <a href="#fullproductname">1 Enter a full product name</a>
+        <a href="#fullproductname">Enter a full product name</a>
       </li>
       <li>
-        <a href="#brand">2 Select yes if the product has a manufacturer's brand name</a>
+        <a href="#brand">Select yes if the product has a manufacturer's brand name</a>
       </li>
       <li>
-        <a href="#brandName">3 Enter a brand name</a>
+        <a href="#brandName">Enter a brand name</a>
       </li>
       <li>
-        <a href="#product">4 Select yes if the product has a specific product name</a>
+        <a href="#product">Select yes if the product has a specific product name</a>
       </li>
       <li>
-        <a href="#productName">5 Enter a product name</a>
+        <a href="#productName">Enter a product name</a>
       </li>
       <li>
-        <a href="#model">6 Select yes if the product have a model name</a>
+        <a href="#model">Select yes if the product have a model name</a>
       </li>
       <li>
-        <a href="#modelName">7 Enter a model name</a>
+        <a href="#modelName">Enter a model name</a>
       </li>
     </ul>
   </div>
