--- a/app/views/product-case-testing/what-is-the-product-category.html
+++ b/app/views/product-case-testing/what-is-the-product-category.html
@@ -13,7 +13,23 @@
 
 
 {% block content %}
-  <div class="govuk-grid-row">
+
+<div class="govuk-error-summary" aria-labelledby="error-summary-title" role="alert" tabindex="-1" data-module="govuk-error-summary">
+  <h2 class="govuk-error-summary__title" id="error-summary-title">
+    There is a problem
+  </h2>
+  <div class="govuk-error-summary__body">
+
+    <ul class="govuk-list govuk-error-summary__list">
+      <li>
+        <a href="#subcategory">Enter a subcategory</a>
+      </li>
+    </ul>
+  </div>
+</div>
+
+
+ <div class="govuk-grid-row">
     <div class="govuk-grid-column-full">
         <h1 class="govuk-heading-l">What is the product category and subcategory?</h1>
     </div>
@@ -22,73 +38,94 @@
       <div class="govuk-grid-row">
         <div class="govuk-grid-column-two-thirds">
 
-      <form action="#" method="post" novalidate>
-
-        {{ govukSelect({
-        formGroup: {
-            classes: "govuk-!-margin-bottom-5"
-        },
-        id: "category",
-        name: "category",
-        label: {
-            text: "Product category",
-            classes: "govuk-label--s"
-        },
-        hint: {
-            html: "Select a category. <br>(COVID-19 categories <abbr>PPE</abbr> and Hand sanitiser have now been added).",
-            classes: "govuk-!-font-size-16"
-        },
-            items: [
-                {
-                value: "val01",
-                text: "Electrical appliances and equipment",
-                selected: true
-                },
-                {
-                value: "val02",
-                text: "Cosmetics"
-                },
-                {
-                value: "val03",
-                text: "Childcare articles and children’s equipment"
-                },
-                {
-                value: "val04",
-                text: "Lorem ipsum etc lorem"
-                },
-                {
-                value: "val05",
-                text: "Ipsum Lorem ipsum etc"
-                },
-                {
-                value: "val06",
-                text: "Lorem lorem ipsoipsum"
-                }
-            ]
+      <form id="test-form" action="#" method="post" novalidate>
 
 
-        }) }}
 
-        {{ govukInput({
-        label: {
-            text: "Product subcategory",
-            classes: "govuk-label--s",
-            isPageHeading: false
-        },
-        classes: "govuk-input--width-10",
-        hint: {
-            text: "Enter a subcategory. For example, Washing machine, Shampoo or Highchair.",
-            classes: "govuk-!-font-size-16"
-        },
-        id: "subcategory",
-        name: "subcategory",
-        spellcheck: false,
-        classes: "govuk-!-width-one-third"
-        }) }}
+<div class="govuk-form-group govuk-!-margin-bottom-5">
+  <label class="govuk-label govuk-label--s" for="category">
+    Product category
+  </label>
 
-        {{ govukButton({
-          text: "Continue"
-        }) }}
+
+
+  <div id="category-hint" class="govuk-hint govuk-!-font-size-16">
+    Select a category. <br>(COVID-19 categories <abbr>PPE</abbr> and Hand sanitiser have now been added).
+  </div>
+
+
+  <select class="govuk-select" id="category" name="category" aria-describedby="category-hint">
+<option value="v0" selected>Personal protective equipment (PPE)</option>
+<option value="v1">Hand sanitiser</option>
+<option value="v2">Chemical products</option>
+<option value="v3">Childcare articles and children’s equipment</option>
+<option value="v4">Clothing, textiles and fashion items</option>
+<option value="v5">Communication and media equipment</option>
+<option value="v6">Construction products</option>
+<option value="v7">Cosmetics</option>
+<option value="v8">Decorative articles</option>
+<option value="v9">Eco-design</option>
+<option value="v10">Electrical appliances and equipment</option>
+<option value="v11">Explosive atmospheres equipment</option>
+<option value="v12">Food-imitating products</option>
+<option value="v13">Furniture</option>
+<option value="v14">Gadgets</option>
+<option value="v15">Gas appliances and components</option>
+<option value="v16">Hand tools</option>
+<option value="v17">Hobby / sports equipment</option>
+<option value="v18">Jewellery</option>
+<option value="v19">Kitchen / cooking accessories</option>
+<option value="v20">Laser pointers</option>
+<option value="v21">Lifts</option>
+<option value="v22">Lighters</option>
+<option value="v23">Lighting chains</option>
+<option value="v24">Lighting equipment</option>
+<option value="v25">Machinery</option>
+<option value="v26">Measuring instruments</option>
+<option value="v27">Motor vehicles (including spare parts)</option>
+<option value="v28">Pressure equipment / vessels</option>
+<option value="v29">Pyrotechnic articles</option>
+<option value="v30">Rail and guided transport</option>
+<option value="v31">Recreational crafts</option>
+<option value="v32">Stationery</option>
+<option value="v33">Toys</option>
+<option value="v34">Waste</option>
+<option value="v35">Other</li>
+</select>
+</div>
+
+
+
+
+<div class="govuk-form-group" data-test-for="input" data-test-ele-name="subcategory">
+  <label class="govuk-label govuk-label--s" for="subcategory">
+    Product subcategory
+  </label>
+
+
+
+  <div id="subcategory-hint" class="govuk-hint govuk-!-font-size-16">
+    Enter a subcategory. For example, Washing machine, Shampoo or Highchair.
+  </div>
+
+    <span id="subcategory-error" class="govuk-error-message">
+    <span class="govuk-visually-hidden">Error:</span> Enter a subcategory
+  </span>
+
+  <input class="govuk-input govuk-!-width-one-third" id="subcategory" name="subcategory" type="text" spellcheck="false" aria-describedby="subcategory-hint">
+</div>
+
+
+
+
+
+
+
+
+<button class="govuk-button" data-module="govuk-button">
+  Continue
+</button>
+
 
 
       </form>
@@ -96,5 +133,6 @@
 
     </div>
   </div>
+
 {% endblock %}
 
