matching products logic code

--- a/app/views/create-cases-add-products/might-already-exist-bc-error.html
+++ b/app/views/create-cases-add-products/might-already-exist-bc-error.html
@@ -134,7 +134,7 @@
             </section>
         </section>
 
-        <form class="form" action="#" method="post" novalidate>
+        <form action="#" method="post" novalidate>
             <div class="govuk-form-group govuk-form-group--error">
                 <fieldset class="govuk-fieldset" aria-describedby="isit-hint isit-error">
 
