--- a/app/views/create-cases-add-products/might-already-exist-bc.html
+++ b/app/views/create-cases-add-products/might-already-exist-bc.html
@@ -123,7 +123,7 @@
             </section>
         </section>
 
-        <form class="form" action="#" method="post" novalidate>
+        <form action="#" method="post" novalidate>
             <div class="govuk-form-group">
                 <fieldset class="govuk-fieldset" aria-describedby="isit-hint">
 
