--- a/app/views/create-cases-add-products/cases-page.html
+++ b/app/views/create-cases-add-products/cases-page.html
@@ -47,7 +47,7 @@
 <div class="govuk-grid-row">
     <div class="govuk-grid-column-full">
 
-        <form class="form" action="#" method="post" novalidate>
+        <form action="#" method="post" novalidate>
             <div class="govuk-form-group govuk-!-padding-top-4 govuk-!-padding-bottom-2">
 
                 <label class="govuk-label" for="cases-search">
@@ -70,7 +70,7 @@
 <div class="govuk-grid-row">
 
     <section class="govuk-grid-column-one-quarter">
-        <form class="form" action="#" method="post" novalidate>
+        <form action="#" method="post" novalidate>
             <div class="govuk-form-group">
                 <fieldset class="govuk-fieldset">
 
