--- a/app/views/create-cases-add-products/find-the-product-error.html
+++ b/app/views/create-cases-add-products/find-the-product-error.html
@@ -29,7 +29,7 @@
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
 
-        <form class="form" action="#" method="post" novalidate>
+        <form action="#" method="post" novalidate>
 
 
 {{ govukRadios({
