--- a/app/views/create-cases-add-products/products-page-new-product.html
+++ b/app/views/create-cases-add-products/products-page-new-product.html
@@ -58,7 +58,7 @@
 <div class="govuk-grid-row">
     <div class="govuk-grid-column-full">
 
-        <form class="form" action="#" method="post" novalidate>
+        <form action="#" method="post" novalidate>
             <div class="govuk-form-group govuk-!-padding-top-4 govuk-!-padding-bottom-2">
 
                 <label class="govuk-label" for="products-search">
@@ -101,7 +101,7 @@
 <div class="govuk-grid-row">
 
     <section class="govuk-grid-column-one-quarter">
-        <form class="form" action="#" method="post" novalidate>
+        <form action="#" method="post" novalidate>
 
             <h2 class="govuk-heading-m">
                 Filter options<span class="govuk-visually-hidden">:</span>
