--- a/app/views/product-case-testing/does-the-product-have-marking.html
+++ b/app/views/product-case-testing/does-the-product-have-marking.html
@@ -42,8 +42,7 @@
 <div class="govuk-grid-row">
     <div class="govuk-grid-column-full">
 
-        <form id="test-form" action="#" method="post" novalidate>
-
+        <form action="#" method="post" novalidate>
 
 <div class="govuk-form-group" data-test-for="radio" data-test-ele-name="marking">
 
@@ -224,5 +223,24 @@
 
     </div>
   </div>
+
+{% endblock %}
+
+{% block bodyEnd %}
+
+  {% block scripts %}
+    {% include "includes/scripts-testing.html" %}
+    {% block pageScripts %}
+    {% endblock %}
+  {% endblock %}
+
+<script>
+  jQuery(document).ready(function(){
+
+    setMenuState('products');
+    validateTheForm($("#main-content").find('form'));
+
+  });
+</script>
 
 {% endblock %}
