--- a/app/views/product-case-testing/first-table-version.html
+++ b/app/views/product-case-testing/first-table-version.html
@@ -25,7 +25,7 @@
 <div class="govuk-grid-row">
     <div class="govuk-grid-column-full">
 
-        <form class="form" action="#" method="post" novalidate>
+        <form action="#" method="post" novalidate>
             <div class="govuk-form-group govuk-!-padding-top-4 govuk-!-padding-bottom-2">
 
                 <label class="govuk-label govuk-label--s" for="products-search">
@@ -68,7 +68,7 @@
 <div class="govuk-grid-row">
 
     <section class="govuk-grid-column-one-quarter">
-        <form class="form" action="#" method="post" novalidate>
+        <form action="#" method="post" novalidate>
             <div class="govuk-form-group">
                 <fieldset class="govuk-fieldset">
 
