--- a/app/views/product-case-testing/might-already-exist.html
+++ b/app/views/product-case-testing/might-already-exist.html
@@ -13,7 +13,7 @@
 
 
 {% block content %}
-  <div class="govuk-grid-row">
+<div class="govuk-grid-row">
     <div class="govuk-grid-column-full">
 
         <h1 class="govuk-heading-l govuk-!-margin-bottom-2">
@@ -30,29 +30,29 @@
                     <span class="govuk-caption-m">The product in our records</span>
 
                     <h2 class="govuk-heading-m govuk-!-margin-bottom-3">
-                        Sony 3000 hair dryer (x3000rpm)
+                        {{ thisFullproductname }}
                     </h2>
 
                     <dl class="govuk-summary-list govuk-summary-list--no-border govuk-!-margin-bottom-3">
                         <div class="govuk-summary-list__row">
                             <dt class="govuk-summary-list__key">Brand </dt>
-                            <dd class="govuk-summary-list__value">Sony</dd>
+                            <dd class="govuk-summary-list__value">{{ thisBrand }}</dd>
                         </div>
                         <div class="govuk-summary-list__row">
                             <dt class="govuk-summary-list__key">Category </dt>
-                            <dd class="govuk-summary-list__value">Hair dryer</dd>
+                            <dd class="govuk-summary-list__value">{{ thisCategory }}</dd>
                         </div>
                         <div class="govuk-summary-list__row">
                             <dt class="govuk-summary-list__key">Subcategory </dt>
-                            <dd class="govuk-summary-list__value">Domestic electricals</dd>
+                            <dd class="govuk-summary-list__value">{{ thisSubcategory }}</dd>
                         </div>
                         <div class="govuk-summary-list__row">
                             <dt class="govuk-summary-list__key">Model <span class="opss-numero" title="Number">&numero;</span> </dt>
-                            <dd class="govuk-summary-list__value"><span class="govuk-visually-hidden">No model number provided</span>&nbsp;</dd>
+                            <dd class="govuk-summary-list__value">{{ thisModelNumber }}</dd>
                         </div>
                         <div class="govuk-summary-list__row">
                             <dt class="govuk-summary-list__key">Barcode </dt>
-                            <dd class="govuk-summary-list__value">12345678910</dd>
+                            <dd class="govuk-summary-list__value">{{ thisBarcode }}</dd>
                         </div>
                     </dl>
 
@@ -63,18 +63,18 @@
                             </span>
                         </summary>
                         <div class="govuk-details__text">
-                            The product description lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut volutpat quam sapien. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Sed in libero urna. Nulla ut rhoncus magna, sagittis dapibus justo. Nullam blandit lacus et dui scelerisque, vel pretium lectus vulputate. In et ultrices sapien. Quisque pharetra, tortor scelerisque accumsan rhoncus, sem quam fermentum dui, non ornare neque mi ac justo.
+                            {{ thisDescription }}
                         </div>
                     </details>
 
                     <details class="govuk-details govuk-!-margin-bottom-3" data-module="govuk-details">
                         <summary class="govuk-details__summary">
                             <span class="govuk-details__summary-text">
-                                Product image<span class="govuk-visually-hidden">: Sony Xeria hair dryer</span>
+                                Product image<span class="govuk-visually-hidden">: {{ thisFullTitle }}</span>
                             </span>
                         </summary>
                         <div class="govuk-details__text">
-                            <img src="../public/images/hair-dryer.jpg" class="opss-details-img" alt="Sony hair dryer">
+                            <img src={%raw%}"{%endraw%}{{ thisImage }}{%raw%}"{%endraw%} class="opss-details-img" alt="Sony hair dryer">
                         </div>
                     </details>
 
@@ -84,38 +84,42 @@
                     <span class="govuk-caption-m">The product you are adding</span>
 
                     <h2 class="govuk-heading-m govuk-!-margin-bottom-3">
-                        Sony Hair Dryer 3000
+                        {{ data['fullproductname'] }}
                     </h2>
 
                     <dl class="govuk-summary-list govuk-summary-list--no-border govuk-!-margin-bottom-3">
                         <div class="govuk-summary-list__row">
                             <dt class="govuk-summary-list__key">Brand </dt>
-                            <dd class="govuk-summary-list__value">Sony</dd>
+                            <dd class="govuk-summary-list__value">{{ data['brandName'] }}</dd>
                         </div>
                         <div class="govuk-summary-list__row">
                             <dt class="govuk-summary-list__key">Category </dt>
-                            <dd class="govuk-summary-list__value">Hair dryer</dd>
+                            <dd class="govuk-summary-list__value">{{ data['category'] }}</dd>
                         </div>
                         <div class="govuk-summary-list__row">
                             <dt class="govuk-summary-list__key">Subcategory </dt>
-                            <dd class="govuk-summary-list__value">Electricals</dd>
+                            <dd class="govuk-summary-list__value">{{ data['subcategory'] }}</dd>
                         </div>
                         <div class="govuk-summary-list__row">
                             <dt class="govuk-summary-list__key">Model <span class="opss-numero" title="Number">&numero;</span> </dt>
                             <dd class="govuk-summary-list__value">
-                                <span class="govuk-visually-hidden">No model number provided yet</span>&nbsp;
+                                {{ data['modelnumber'] }}
+                                <!--span class="govuk-visually-hidden">No model number provided yet</span>&nbsp;-->
                             </dd>
                         </div>
                         <div class="govuk-summary-list__row">
                             <dt class="govuk-summary-list__key">Barcode </dt>
-                            <dd class="govuk-summary-list__value"> <span class="govuk-visually-hidden">Not available</span> </dd>
+                            <dd class="govuk-summary-list__value">
+                                {{ data['barnumber'] }}
+                                <!--span class="govuk-visually-hidden">Not available</span-->
+                            </dd>
                         </div>
                     </dl>
 
             </section>
         </section>
 
-        <form class="form" action="#" method="post" novalidate>
+        <form action="#" method="post" novalidate>
             <div class="govuk-form-group">
                 <fieldset class="govuk-fieldset" aria-describedby="isit-hint">
 
@@ -141,12 +145,38 @@
                 </fieldset>
             </div>
 
-            {{ govukButton({
-            text: "Continue"
-            }) }}
+
+
+
+
+
+
+<button class="govuk-button" data-module="govuk-button">
+  Continue
+</button>
+
 
         </form>
 
     </div>
   </div>
+{% endblock %}
+
+{% block bodyEnd %}
+
+  {% block scripts %}
+    {% include "includes/scripts-testing.html" %}
+    {% block pageScripts %}
+    {% endblock %}
+  {% endblock %}
+
+<script>
+  jQuery(document).ready(function(){
+
+    setMenuState('products');
+    validateTheForm($("#main-content").find('form'));
+
+  });
+</script>
+
 {% endblock %}
