--- a/app/views/product-case-testing/products-page.html
+++ b/app/views/product-case-testing/products-page.html
@@ -43,7 +43,7 @@
 <div class="govuk-grid-row">
     <div class="govuk-grid-column-full">
 
-        <form class="form" action="#" method="post" novalidate>
+        <form action="#" method="post" novalidate>
             <div class="govuk-form-group govuk-!-padding-top-4 govuk-!-padding-bottom-2">
 
                 <label class="govuk-label" for="products-search">
@@ -86,7 +86,7 @@
 <div class="govuk-grid-row">
 
     <section class="govuk-grid-column-one-quarter">
-        <form class="form" action="#" method="post" novalidate>
+        <form action="#" method="post" novalidate>
 
             <h2 class="govuk-heading-m">
                 Filter options<span class="govuk-visually-hidden">:</span>
@@ -217,7 +217,7 @@
         </form>
 
 
-        <!--form class="form" action="#" method="post" novalidate>
+        <!--form action="#" method="post" novalidate>
             <div class="govuk-form-group">
                 <fieldset class="govuk-fieldset">
 
