--- a/app/views/product-case-testing/upload-a-product-image-success-error.html
+++ b/app/views/product-case-testing/upload-a-product-image-success-error.html
@@ -41,7 +41,7 @@
 <div class="govuk-grid-row opss-equal-height-container">
 
     <section class="govuk-grid-column-two-thirds opss-equal-height__col" role="region" aria-label="Form">
-        <form class="form" action="#" method="post" novalidate>
+        <form action="#" method="post" novalidate>
 
 {{ govukRadios({
   idPrefix: "another",
