--- a/app/views/create-cases-add-products/can-you-provide-an-image-error.html
+++ b/app/views/create-cases-add-products/can-you-provide-an-image-error.html
@@ -19,7 +19,7 @@
   errorList: [
     {
       text: "Select yes if you can provide an image of the product",
-      href: "#branded"
+      href: "#productimage"
     }
   ]
 }) }}
