--- a/app/views/layout-user-testing.html
+++ b/app/views/layout-user-testing.html
@@ -40,6 +40,7 @@
     .govuk-error-summary__list li {display: none; }
 
     .govuk-form-group--error > fieldset > .govuk-error-message,
+    .govuk-form-group--error[data-test-for=textarea] > .govuk-error-message,
     .govuk-radios__conditional .govuk-form-group--error .govuk-error-message,
     .govuk-form-group--error[data-test-for=input] .govuk-error-message {display: block; }
 
