--- a/app/views/product-case-testing/might-already-exist.html
+++ b/app/views/product-case-testing/might-already-exist.html
@@ -13,6 +13,20 @@
 
 
 {% block content %}
+<div class="govuk-error-summary" aria-labelledby="error-summary-title" role="alert" tabindex="-1" data-module="govuk-error-summary">
+  <h2 class="govuk-error-summary__title" id="error-summary-title">
+    There is a problem
+  </h2>
+  <div class="govuk-error-summary__body">
+    <ul class="govuk-list govuk-error-summary__list">
+
+      <li>
+        <a href="#isit">Select yes if this is your product</a>
+      </li>
+    </ul>
+  </div>
+</div>
+
 <div class="govuk-grid-row">
     <div class="govuk-grid-column-full">
 
@@ -120,12 +134,16 @@
         </section>
 
         <form action="#" method="post" novalidate>
-            <div class="govuk-form-group">
+            <div class="govuk-form-group" data-test-for="radio" data-test-ele-name="isit">
                 <fieldset class="govuk-fieldset" aria-describedby="isit-hint">
 
                     <legend class="govuk-visually-hidden">
                         Do you want to stop adding a new product?
                     </legend>
+
+                    <span id="isit-error" class="govuk-error-message">
+                        <span class="govuk-visually-hidden">Error:</span> Select yes if this is your product
+                    </span>
 
                     <div class="govuk-radios govuk-!-padding-bottom-1">
                         <div class="govuk-radios__item">
